# pyside-poppler

./: CMakeLists.txt  README  README.md  demo.py  setup.py.in
poppler/: CMakeLists.txt  global.h  typesystem_poppler.xml
